# GiNaC

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  GiNaC.spec.in  INSTALL  Makefile.am  Makefile.in  NEWS  README  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.guess  config.h.in  config.sub  configure  configure.ac  configure.in  ginac-config.1.in  ginac-config.in  ginac.m4  ginac.pc.in  ltconfig
check/: CMakeLists.txt  Makefile.am  Makefile.in  bugme_chinrem_gcd.cpp  check.h  check_inifcns.cpp  check_lsolve.cpp  check_matrices.cpp  check_numeric.cpp  checks.cpp  checks.h  checks.ref  differentiation.cpp  error_report.h  exam_archive.cpp  exam_clifford.cpp  exam_color.cpp  exam_cra.cpp  exam_differentiation.cpp  exam_factor.cpp  exam_hashmap.cpp  exam_indexed.cpp  exam_inifcns.cpp  exam_inifcns_nstdsums.cpp  exam_inifcns_nstdsums.h  exam_inifcns_nstdsums_data  exam_lsolve.cpp  exam_matrices.cpp  exam_misc.cpp  exam_mod_gcd.cpp  exam_noncommut.cpp  exam_normalization.cpp  exam_numeric.cpp  exam_paranoia.cpp  exam_polygcd.cpp  exam_powerlaws.cpp  exam_pseries.cpp  exam_structure.cpp  exams.cpp  exams.h  (+62 more)
cint/: Makefile.am  Makefile.in  configure  dummies.cpp  dummies.h  dummies.pl  dummy_ginsh.cpp  exam_mansamples.cpp  exam_misc.cpp  exam_paranoia.cpp  genheader.pl  ginaccint.1  ginaccint.bin.cpp  ginaccint.cpp  ginaccint.in  launch.h.in  run_exams.cpp
cmake/modules/: FindCLN.cmake
debian/: README.debian  changelog  control  copyright  dirs  ginac-cint.files  ginac-dev.files  ginac-dev.postinst  ginac-dev.postrm  ginac-ginsh.menu  ginac-ginsh.postrm  ginac-tools.files  ginac-tools.install  ginac-tools.menu  ginac.files  ginac.menu  ginac.xpm  ginaccint.files  info.ex  libginac-dev.dirs  libginac-dev.files  libginac-dev.info  libginac-dev.install  libginac-dev.postinst  libginac-dev.postrm  libginac-dev.prerm  libginac1.1.files  libginac1.4.install  manpage.1.ex  postinst  rules  shlibs
doc/: CMakeLists.txt  CodingStyle  DoxyfileHTML  DoxyfileTEX  Doxyfooter.html  Makefile  Makefile.am  Makefile.in  classhierarchy.fig  ginac-config.1  powerlaws.tex  rep_naive.fig  rep_pair.fig  tutorial.sgml.in
doc/examples/: Makefile.am  compile1.cpp  ginac-examples.texi  lanczos.cpp  mystring.cpp
doc/reference/: DoxyfileHTML  DoxyfileTEX  Makefile.am  Makefile.in
doc/tutorial/: Makefile.am  Makefile.in  classhierarchy.fig  ginac.texi  repnaive.txt  stamp-vti  texinfo.tex  tutorial.sgml.in  version.texi
ginac/: CMakeLists.txt  Makefile.am  Makefile.in  add.cpp  add.h  archive.cpp  archive.h  assertion.h  basic.cpp  basic.h  class_info.h  clifford.cpp  clifford.h  color.cpp  color.h  coloridx.cpp  coloridx.h  compiler.h  constant.cpp  constant.h  container.h  container.pl  debugmsg.h  diff.cpp  ex.cpp  ex.h  excompiler.cpp  excompiler.h  expair.cpp  expair.h  expairseq.cpp  expairseq.h  exprseq.cpp  exprseq.h  exprseq_suppl.cpp  factor.cpp  factor.h  fail.cpp  fail.h  fderivative.cpp  (+83 more)
ginac/parser/: builtin_fcns.def  debug.h  debug.hpp  default_reader.cpp  default_reader.tpl  lexer.cpp  lexer.h  lexer.hpp  parse_binop_rhs.cpp  parse_context.cpp  parse_context.h  parse_context.hpp  parser.cpp  parser.h  parser.hpp  parser_compat.cpp
ginac/polynomial/: chinrem_gcd.cpp  chinrem_gcd.h  collect_vargs.cpp  collect_vargs.h  cra_garner.cpp  cra_garner.h  cra_garner.hpp  debug.h  debug.hpp  divide_in_z_p.cpp  divide_in_z_p.h  euclid_gcd_wrap.h  eval_point_finder.h  eval_uvar.h  gcd_euclid.h  gcd_euclid.tcc  gcd_uvar.cpp  heur_gcd_uvar.h  interpolate_padic_uvar.h  mgcd.cpp  mod_gcd.cpp  mod_gcd.h  mod_gcd.hpp  newton_interpolate.h  normalize.h  normalize.tcc  optimal_vars_finder.cpp  optimal_vars_finder.h  pgcd.cpp  pgcd.h  poly_cra.h  prem_uvar.h  primes_factory.h  primpart_content.cpp  remainder.h  remainder.tcc  ring_traits.h  ring_traits.hpp  smod_helpers.h  sr_gcd_uvar.h  (+5 more)
ginsh/: CMakeLists.txt  Makefile.am  Makefile.in  ginsh.1  ginsh.1.in  ginsh.h  ginsh.l  ginsh.y  ginsh_extensions.h  ginsh_fcn_help.sed  ginsh_lexer.cc  ginsh_lexer.ll  ginsh_lexer.lpp  ginsh_op_help.sed  ginsh_parser.cc  ginsh_parser.h  ginsh_parser.ypp  ginsh_parser.yy  strdup.c
tools/: CMakeLists.txt  Makefile.am  Makefile.in  ginac-excompiler.in  viewgar.1  viewgar.1.in  viewgar.cpp
