## Process this file with automake to produce Makefile.in
lib_LTLIBRARIES = libginac.la
libginac_la_SOURCES = add.cpp basic.cpp constant.cpp diff.cpp ex.cpp \
  expairseq.cpp exprseq.cpp fail.cpp function.cpp inifcns.cpp \
  inifcns_trans.cpp inifcns_gamma.cpp matrix.cpp mul.cpp normal.cpp \
  numeric.cpp operators.cpp power.cpp print.cpp printraw.cpp printtree.cpp \
  printcsrc.cpp relational.cpp symbol.cpp utils.cpp series.cpp ncmul.cpp \
  clifford.cpp structure.cpp color.cpp indexed.cpp idx.cpp isospin.cpp \
  exprseq_suppl.cpp lst.cpp lst_suppl.cpp simp_lor.cpp coloridx.cpp \
  lorentzidx.cpp utils.h
ginacincludedir = $(includedir)/ginac
ginacinclude_HEADERS = ginac.h add.h basic.h clifford.h color.h coloridx.h \
  constant.h debugmsg.h ex.h expair.h expairseq.h exprseq.h fail.h flags.h \
  function.h idx.h indexed.h inifcns.h isospin.h lorentzidx.h lst.h matrix.h \
  mul.h ncmul.h normal.h numeric.h operators.h power.h relational.h series.h \
  simp_lor.h structure.h symbol.h tinfos.h
