## Process this file with automake to produce Makefile.in

lib_LTLIBRARIES = libginac.la
libginac_la_SOURCES = add.cpp archive.cpp basic.cpp clifford.cpp color.cpp \
  constant.cpp ex.cpp excompiler.cpp expair.cpp expairseq.cpp exprseq.cpp \
  fail.cpp factor.cpp fderivative.cpp function.cpp idx.cpp indexed.cpp inifcns.cpp \
  inifcns_trans.cpp inifcns_gamma.cpp inifcns_nstdsums.cpp \
  integral.cpp lst.cpp matrix.cpp mul.cpp ncmul.cpp normal.cpp numeric.cpp \
  operators.cpp power.cpp registrar.cpp relational.cpp remember.cpp \
  pseries.cpp print.cpp symbol.cpp symmetry.cpp tensor.cpp \
  utils.cpp wildcard.cpp \
  remember.h tostring.h utils.h compiler.h \
  parser/parse_binop_rhs.cpp \
  parser/parser.cpp \
  parser/parse_context.cpp \
  parser/builtin_fcns.cpp \
  parser/lexer.cpp \
  parser/lexer.hpp \
  parser/parser_compat.cpp \
  parser/debug.hpp \
polynomial/mod_gcd.cpp \
polynomial/cra_garner.cpp \
polynomial/gcd_euclid.tcc \
polynomial/remainder.tcc \
polynomial/normalize.tcc \
polynomial/upoly.hpp \
polynomial/ring_traits.hpp \
polynomial/mod_gcd.hpp \
polynomial/cra_garner.hpp \
polynomial/upoly_io.hpp \
polynomial/upoly_io.cpp \
polynomial/debug.hpp

libginac_la_LDFLAGS = -version-info $(LT_VERSION_INFO) -release $(LT_RELEASE)
libginac_la_LIBADD = $(DL_LIBS)
ginacincludedir = $(includedir)/ginac
ginacinclude_HEADERS = ginac.h add.h archive.h assertion.h basic.h class_info.h \
  clifford.h color.h constant.h container.h ex.h excompiler.h expair.h expairseq.h \
  exprseq.h fail.h factor.h fderivative.h flags.h function.h hash_map.h idx.h indexed.h \
  inifcns.h integral.h lst.h matrix.h mul.h ncmul.h normal.h numeric.h operators.h \
  power.h print.h pseries.h ptr.h registrar.h relational.h structure.h \
  symbol.h symmetry.h tensor.h version.h wildcard.h \
  parser/parser.hpp \
  parser/parse_context.hpp

EXTRA_DIST = function.pl version.h.in \
parser/default_reader.tpl parser/builtin_fcns.def

# Files produced by autogen(1) from templates
$(srcdir)/parser/builtin_fcns.cpp: $(srcdir)/parser/builtin_fcns.def $(srcdir)/parser/default_reader.tpl
	set -e; if [ -n "$(AUTOGEN)" ]; then \
		cd $(srcdir)/parser; \
		$(AUTOGEN) -T default_reader.tpl builtin_fcns.def; \
	elif [ -f $@ ]; then \
		echo "WARNING: AutoGen is not available, the \"$@\" file WON'T be re-generated"; \
	else \
		echo "*** ERROR: the \"$@\" file does not exist, and AutoGen is not installed on your system"; \
		echo "***        Please install AutoGen (http://www.gnu.org/software/autogen)"; \
		exit 1; \
	fi
		

# Files which are generated by perl scripts
$(srcdir)/function.h $(srcdir)/function.cpp: $(srcdir)/function.pl
	cd $(srcdir) && perl -w function.pl

# Force build of headers before compilation
$(srcdir)/add.cpp: $(srcdir)/function.h
